--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-input-mask": "^2.0.4"
+    "react-input-mask": "^2.0.4",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@emotion/react": "^11.13.3",
